--- a/index.html
+++ b/index.html
@@ -1,23 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width,initial-scale=1.0">
-		<link rel="stylesheet" href="css/reset.css">
-		<link rel="stylesheet" href="css/main.css">
-		<title>Simple Review</title>
-	</head>
 
-	<body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-		<main class="wrapper">
+    <!-- css stuff -->
+    <!-- link to reset -->
+    <link rel="stylesheet" href="">
+    <title>Modules as a Concepts</title>
+</head>
 
-			<h1>Welcome Back</h1>
+<body>
+    <h1>Fun with Modules!</h1>
+    <nav data-module="nav">
+        <!-- nav elements must have nav-item -->
+        <ul>
+            <li><a href="#" class="nav-item">1</a></li>
+            <li><a href="/2" class="nav-item">2</a></li>
+            <li><a href="#section3" class="nav-item">3</a></li>
+            <li><a href="#section4" class="nav-item">4</a></li>
+            <li><a href="#section5" class="nav-item">5</a></li>
+        </ul>
+    </nav>
 
+    <main>
+        <section id="section1" class="panel"></section>
+        <section id="section2" class="panel">panel 2</section>
+        <section id="section3" class="panel"></section>
+        <section id="section4" class="panel">panel 4</section>
+        <section id="section5" class="panel"></section>
+    </main>
 
-		</main>
-	</body>
+    <footer>
+        <p>here's some footer text</p>
 
-	<script src="js/main.js"></script>
+        <ul>
+            <li><a href="#" class="nav-item">1</a></li>
+            <li><a href="/2" class="nav-item">2</a></li>
+            <li><a href="#section3" class="nav-item">3</a></li>
+            <li><a href="#section4" class="nav-item">4</a></li>
+            <li><a href="#section5" class="nav-item">5</a></li>
+        </ul>
+    </footer>
+
+    <a id="to-top" href="#" class="nav-item">back to top</a>
+</body>
 
 </html>
